Bug 705863 - Segfault with x11cmyk x11gray2 x11gray4
Summary: Segfault with x11cmyk x11gray2 x11gray4
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: X Display Driver (show other bugs)
Version: 9.56.1
Hardware: PC Linux
: P4 normal
Assignee: Chris Liddell (chrisl)
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-09-13 10:03 UTC by M.J.G.
Modified: 2022-10-05 09:43 UTC (History)
1 user (show)

See Also:
Customer:
Word Size: ---


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description M.J.G. 2022-09-13 10:03:17 UTC
Apparantly, the fix for bug #703013 may have broken some devices, in particular x11cmyk x11gray2 x11gray4 give a seg fault when doing (i= one of those, others work):

gs  -dBATCH -dNOPAUSE -sDEVICE=$i -sOutputFile=/dev/null dummy.pdf >/dev/null

I bisected this to commit 270438bfda60.

Maybe the comment (above the changed lines) was right after all, and the real fix should be in get_params wrapper or such?
Comment 1 Chris Liddell (chrisl) 2022-10-05 09:09:02 UTC
Fixed in:

https://git.ghostscript.com/?p=ghostpdl.git;a=commitdiff;h=90072538c2fb
Comment 2 M.J.G. 2022-10-05 09:43:23 UTC
(In reply to Chris Liddell (chrisl) from comment #1)
> Fixed in:
> 
> https://git.ghostscript.com/?p=ghostpdl.git;a=commitdiff;h=90072538c2fb

Thanks a bunch for the fix!

Confirmed to work as backport on 9.56.1 also (as expected).