devices/gdevxcmp.c
@@ -1,4 +1,4 @@
-/* Copyright (C) 2001-2021 Artifex Software, Inc.
+/* Copyright (C) 2001-2022 Artifex Software, Inc.
    All Rights Reserved.
 
    This software is provided AS-IS with no warranty, either express or
@@ -477,7 +477,7 @@ monochrome:
         }
     }
 #endif
-
+    xdev->orig_color_info = xdev->color_info;
     return 0;
 }
 
